Android v2.3.7 HTTPS support